--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
             <version>5.1.35</version>
         </dependency>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity3</artifactId>
             <version>2.1.2.RELEASE</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <properties>
