--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     </parent>
 
     <dependencies>
+        <!--Spring Boot related dependencies-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -31,7 +32,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- <dependency>
+             <groupId>org.thymeleaf.extras</groupId>
+             <artifactId>thymeleaf-extras-springsecurity3</artifactId>
+             <version>2.1.2.RELEASE</version>
+         </dependency>-->
 
+        <!--Connector to be used by JPA-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -39,11 +46,6 @@
         </dependency>
 
 
-       <!-- <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity3</artifactId>
-            <version>2.1.2.RELEASE</version>
-        </dependency>-->
 
     </dependencies>
 
