--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
-        <!-- <dependency>
+        <!--Extra dependency to use spring security in thymeleaf -->
+        <dependency>
              <groupId>org.thymeleaf.extras</groupId>
              <artifactId>thymeleaf-extras-springsecurity3</artifactId>
              <version>2.1.2.RELEASE</version>
-         </dependency>-->
+         </dependency>
 
         <!--Connector to be used by JPA-->
         <dependency>
