first version of create pack, todo: validation, remove of chosen options, create new option and add immediately

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- automatic object mapping to json -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.10</version>
+        </dependency>
     </dependencies>
 
     <properties>
