--- a/util/pom.xml
+++ b/util/pom.xml
@@ -9,12 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service</artifactId>
-<dependencies>
-    <dependency>
-        <groupId>com.realdolmen.fleet</groupId>
-        <artifactId>persist</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </dependency>
-</dependencies>
+    <artifactId>util</artifactId>
+
+
 </project>
