--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -20,7 +20,12 @@
 
         <dependency>
             <groupId>com.realdolmen.fleet</groupId>
-            <artifactId>persist</artifactId>
+            <artifactId>service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.realdolmen.fleet</groupId>
+            <artifactId>util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
