--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>service</module>
         <module>untitled</module>
         <module>util</module>
+        <module>comparator</module>
     </modules>
 
     <packaging>pom</packaging>
