--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
         <module>model</module>
         <module>persist</module>
         <module>service</module>
-        <module>untitled</module>
         <module>util</module>
     </modules>
 
@@ -52,10 +51,10 @@
 
         <!--Extra dependency to use spring security in thymeleaf -->
         <dependency>
-             <groupId>org.thymeleaf.extras</groupId>
-             <artifactId>thymeleaf-extras-springsecurity3</artifactId>
-             <version>2.1.2.RELEASE</version>
-         </dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity3</artifactId>
+            <version>2.1.2.RELEASE</version>
+        </dependency>
 
         <!--Connector to be used by JPA-->
         <dependency>
@@ -82,6 +81,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <start-class>com.realdolmen.fleet.ApplicationConfiguration </start-class>
     </properties>
 
     <build>
