--- a/comparator/pom.xml
+++ b/comparator/pom.xml
@@ -10,10 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>comparator</artifactId>
-
+    <dependencies>
     <dependency>
         <groupId>com.realdolmen.fleet</groupId>
         <artifactId>model</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    </dependencies>
 </project>
