--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <start-class>com.realdolmen.fleet.ApplicationConfiguration </start-class>
+    </properties>
 
     <groupId>com.realdolmen.fleet</groupId>
     <artifactId>RealDolmenFleet</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>webapp</module>
         <module>model</module>
@@ -14,9 +21,8 @@
         <module>service</module>
         <module>util</module>
         <module>comparator</module>
+        <module>enums</module>
     </modules>
-
-    <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -79,11 +85,6 @@
             <version>1.9.10</version>
         </dependency>
     </dependencies>
-
-    <properties>
-        <java.version>1.8</java.version>
-        <start-class>com.realdolmen.fleet.ApplicationConfiguration </start-class>
-    </properties>
 
     <build>
         <plugins>
