commit before pull

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>util</module>
         <module>comparator</module>
         <module>enums</module>
+        <module>sql-generator</module>
     </modules>
 
     <parent>
