--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
             <artifactId>jaxws-rt</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-ws</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>wsdl4j</groupId>
+            <artifactId>wsdl4j</artifactId>
+        </dependency>
 
         <!-- Library from java.net, integrate Spring with JAX-WS -->
         <dependency>
