finished all model and persistence tests

--- a/webapp/src/main/resources/config/application.properties
+++ b/webapp/src/main/resources/config/application.properties
@@ -7,6 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #Logging configuration
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
 logging.file=fleet.logs
