--- a/service/pom.xml
+++ b/service/pom.xml
@@ -30,5 +30,10 @@
         <artifactId>comparator</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+        <groupId>com.realdolmen.fleet</groupId>
+        <artifactId>util</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
 </dependencies>
 </project>
