placed junit dependency in dependencymanagement

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>service</artifactId>
 <dependencies>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+    </dependency>
 
     <dependency>
         <groupId>javax.mail</groupId>
