--- a/comparator/pom.xml
+++ b/comparator/pom.xml
@@ -11,10 +11,14 @@
 
     <artifactId>comparator</artifactId>
     <dependencies>
-    <dependency>
-        <groupId>com.realdolmen.fleet</groupId>
-        <artifactId>model</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.realdolmen.fleet</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
