--- a/model/pom.xml
+++ b/model/pom.xml
@@ -19,6 +19,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.realdolmen.fleet</groupId>
             <artifactId>enums</artifactId>
             <version>1.0-SNAPSHOT</version>
