--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <start-class>com.realdolmen.fleet.ApplicationConfiguration </start-class>
+        <start-class>com.realdolmen.fleet.ApplicationConfiguration</start-class>
     </properties>
 
     <groupId>com.realdolmen.fleet</groupId>
@@ -124,6 +124,17 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>3.8.1</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
